Fix layout issue on mobile

--- a/src/AppViewLite.Web/wwwroot/app.css
+++ b/src/AppViewLite.Web/wwwroot/app.css
@@ -373,7 +373,7 @@ main {
         display: flex;
     }
 
-    .settings-back-link {
+    .back-link {
         margin-top: 12px !important;
     }
     
